[tool.poetry]
name = "py-yaas"
version = "0.2.0"
description = ""
authors = ["Gustavo Kuhn Andriotti <gkandriotti@google.com>"]
readme = "README.md"
packages = [{include = "py_yaas"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
